--- a/aappz/build.gradle
+++ b/aappz/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
 }
 
+group = publishedGroupId
 version = libraryVersion
 
 install {
