--- a/aappz/build.gradle
+++ b/aappz/build.gradle
@@ -58,12 +58,11 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:customtabs:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:support-media-compat:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
 
     implementation 'com.google.android.gms:play-services-ads:17.0.0'
-    implementation 'com.google.firebase:firebase-core:16.0.5'
+    implementation 'com.google.firebase:firebase-analytics:16.0.5'
 }
 
 group = publishedGroupId
