--- a/aappz/src/main/AndroidManifest.xml
+++ b/aappz/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
-<manifest package="io.github.fentonmartin.aappz"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="io.github.fentonmartin.aappz">
 
-    <!--<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />-->
-    <!--<uses-permission android:name="android.permission.INTERNET" />-->
-    <!--<uses-permission android:name="android.permission.WAKE_LOCK" />-->
+    <application>
+        <activity
+            android:name=".permission.PermissionActivity"
+            android:theme="@style/Permissions.TransparentTheme" />
+    </application>
 
 </manifest>
