--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".PermissionActivity" />
-        <activity android:name=".PermissionV2Activity">
+        <activity android:name=".PermissionV2Activity"></activity>
+        <activity android:name=".TextActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
