--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,15 +17,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".PermissionActivity" />
-        <activity android:name=".PermissionV2Activity"></activity>
-        <activity android:name=".TextActivity">
+        <activity android:name=".DateActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".PermissionActivity" />
+        <activity android:name=".PermissionV2Activity" />
+        <activity android:name=".TextActivity" />
     </application>
 
 </manifest>
