--- a/aappz/build.gradle
+++ b/aappz/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'com.jfrog.bintray'
 
 ext {
     bintrayRepo = 'maven'
-    bintrayName = 'AappZ'
+    bintrayName = 'aappz'
 
     publishedGroupId = 'io.github.fentonmartin'
     libraryName = 'AappZ'
