--- a/aappz/build.gradle
+++ b/aappz/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 }
 
 group = publishedGroupId
