--- a/aappz/build.gradle
+++ b/aappz/build.gradle
@@ -140,3 +140,10 @@ bintray {
         }
     }
 }
+
+if (JavaVersion.current().isJava8Compatible()) {
+    tasks.withType(Javadoc) {
+        //noinspection SpellCheckingInspection
+        options.addStringOption('Xdoclint:none', '-quiet')
+    }
+}
